--- a/app/src/main/res/layout/list_view_custom_row.xml
+++ b/app/src/main/res/layout/list_view_custom_row.xml
@@ -9,8 +9,8 @@
         android:id="@+id/imageMiniatura"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="19dp"
         app:layout_constraintEnd_toStartOf="@+id/nomePokemon"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,11 +19,14 @@
 
     <TextView
         android:id="@+id/nomePokemon"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="243dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="50dp"
         android:text="TextView"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageMiniatura"
         app:layout_constraintTop_toTopOf="parent" />
